force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <displayFormat>REF-{0000000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>