force-app/main/default/objects/Referral__c/fields/Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Id__c</fullName>
    <label>Appointment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>