force-app/main/default/objects/Referral__c/fields/Appointment_Required__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Required</label>
    <type>Checkbox</type>
</CustomField>