force-app/main/default/objects/Referral__c/fields/Need_Identification__c.field-meta.xml
<CustomField>
    <fullName>Need_Identification__c</fullName>
    <label>Need Identification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>