force-app/main/default/objects/Referral__c/fields/Referral_Detail__c.field-meta.xml
<CustomField>
    <fullName>Referral_Detail__c</fullName>
    <label>Referral Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LEAD TO APP</fullName>
            </value>
            <value>
                <fullName>MORTGAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>