force-app/main/default/objects/Referral__c/fields/Referral_Segment__c.field-meta.xml
<CustomField>
    <fullName>Referral_Segment__c</fullName>
    <label>Referral Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LEAD TO APP</fullName>
            </value>
            <value>
                <fullName>MORTGAGE</fullName>
            </value>
            <value>
                <fullName>HOME EQUITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>