force-app/main/default/objects/Referral__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REFERRAL - MORTGAGE</fullName>
                <default>true</default>
                <label>REFERRAL - MORTGAGE</label>
            </value>
            <value>
                <fullName>REFERRAL - BRANCH/NFSC</fullName>
            </value>
            <value>
                <fullName>REFERRAL - WEALTH</fullName>
            </value>
            <value>
                <fullName>REFERRAL - BROKERAGE</fullName>
            </value>
            <value>
                <fullName>REFERRAL - INVESTMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>