force-app/main/default/objects/Referral__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Des Lender</fullName>
            </value>
            <value>
                <fullName>MLO</fullName>
            </value>
            <value>
                <fullName>Home Lending Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>