force-app/main/default/objects/Referral__c/recordTypes/Brokerage_Referral.recordType-meta.xml
<RecordType>
    <fullName>Brokerage_Referral</fullName>
    <active>true</active>
    <label>Brokerage Referral</label>
</RecordType>