force-app/main/default/objects/Referral__c/recordTypes/Investment_Referral.recordType-meta.xml
<RecordType>
    <fullName>Investment_Referral</fullName>
    <active>true</active>
    <label>Investment Referral</label>
</RecordType>