force-app/main/default/objects/Referral__c/recordTypes/NFSC_Referral.recordType-meta.xml
<RecordType>
    <fullName>NFSC_Referral</fullName>
    <active>true</active>
    <label>NFSC Referral</label>
</RecordType>