force-app/main/default/objects/Referral__c/recordTypes/Referral_Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Referral_Mortgage</fullName>
    <active>true</active>
    <label>Referral Mortgage</label>
</RecordType>