force-app/main/default/objects/Referral__c/recordTypes/Wealth_Referral.recordType-meta.xml
<RecordType>
    <fullName>Wealth_Referral</fullName>
    <active>true</active>
    <label>Wealth Referral</label>
</RecordType>