force-app/main/default/objects/Referral__c/validationRules/Appointment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Appointment_Id__c ), Appointment_Required__c)</errorConditionFormula>
    <errorDisplayField>Appointment_Id__c</errorDisplayField>
    <errorMessage>Please enter the Appointment Id</errorMessage>
</ValidationRule>